# corpora-tools

./: CMakeLists.txt  README.md  augmentInputMatches.cpp  chrF.py  clean-corpus.py  corpus-clean-bitext.py  corpus-divide-data.py  corpus-split.py  diff2html.perl  download.sh  fuzzyMatching.py  idf.py  integrateEmbeddingMatches.py  integrateFuzzyMatches.py  integrateNgramMatches.py  japanTok.py  matches2input.cpp  ngramMatching.py  onmt-tokenize.py  print_line_n.py  requirements.txt  splitFeatsJoiner.py
Eval/: ali2links_html.perl  ali2matrix_html.perl  multi-bleu.perl  ud2html.py
SpacCy/: SpaCy.py  display.py  spacy2feat.py
corpus/: accronymes.py  corpus-analyse.py  corpus-clean-bitext.py  corpus-sets-data.py  faiss_cli.py  lexical_score.perl  matchs.py  print_line_n.py  sim2prime.py  sim2src_tgt_sim_pre.py  tfidf.py  tokenizer.py  train-phrases.py
edit_distance/: edist.py
gaps/: fillInTheGaps.py
include/: Align.h  LCS.h  Tools.h
matching/: BilUnits.py  NgramMatch.py  fuzzyMatching.py  tokenizer.py  unrelated.py
simalign/: align.py  all_attention.py  onmt_align.py  related.py  similar_attention.py  tm_attention.py
src/: Align.cpp  CMakeLists.txt  LCS.cpp  Tools.cpp  augmentInputMatches_cli.cpp  lcs_cli.cpp  phrases_cli.cpp  unfold_cli.cpp
tokenise/: HOWTO.download_install_treetagger.sh  subword_learn.py  tokenize.py  tokenizer.py  treetagger.py
w2vec/: dataset.py  model.py  w2vec.py
